<resources>
    <string name="app_name">AndroidFinance</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="loading">Loading...</string>

    <string name="operations">Operations</string>
    <string name="storages">Storages</string>
    <string name="sources">Sources</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <string name="add_sub_category">+ Sub category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Delete record?</string>
    <string name="has_operations">Can\'t delete record with operations</string>
    <string name="deleted">Cancel delete?</string>
    <string name="undo">UNDO</string>

    <string name="all">All</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>

    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="icon">Icon</string>
    <string name="adding">Adding</string>
    <string name="editing">Editing</string>
    <string name="empty_name">Empty name</string>


</resources>
