<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_operations"
            android:icon="@drawable/ic_operations"
            android:title="@string/operations" />
        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_storage"
            android:title="@string/storages" />
        <item
            android:id="@+id/nav_source"
            android:icon="@drawable/ic_source"
            android:title="@string/sources" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_report"
            android:title="@string/reports" />
    </group>

    <group
        android:id="@+id/menu_additional"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_reference"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

    </group>

</menu>
